cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
project(codingame)
add_executable(${PROJECT_NAME}_tins "theIsNoSpoon2.cpp")
add_executable(${PROJECT_NAME}_hs "hypersonic.cpp")
add_executable(${PROJECT_NAME}_fb "fantasticBits.cpp")
add_executable(${PROJECT_NAME}_gitc "gostInTheCell.cpp")
add_executable(${PROJECT_NAME}_u16 "unleash16.cpp")
add_executable(${PROJECT_NAME}_u17 "unleash17.cpp")
add_executable(${PROJECT_NAME}_ww "wondevwoman.cpp")
