cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
project(codingame)
add_executable(${PROJECT_NAME}_tins "puzzle/thereIsNoSpoon2.cpp")
add_executable(${PROJECT_NAME}_hs "contest/hypersonic.cpp")
add_executable(${PROJECT_NAME}_fb "contest/fantasticBits.cpp")
add_executable(${PROJECT_NAME}_gitc "contest/gostInTheCell.cpp")
add_executable(${PROJECT_NAME}_u16 "contest/unleash16.cpp")
add_executable(${PROJECT_NAME}_u17 "contest/unleash17.cpp")
add_executable(${PROJECT_NAME}_ww "contest/wondevwoman.cpp")
